[package]
name = "markov_bot"
version = "1.0.0"
authors = ["Wojciech Jarząbek <WojciechJarzabek@windowslive.com>"]
edition = "2018"
publish = false

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = true

[dependencies]
bincode = "1.2.1"
dotenv = "0.15.0"
futures = "0.3.1"
markov = "1.0.2"
serde = "1.0.104"
tbot = "0.3.0"
tokio = { version = "0.2.6", features = ["macros", "sync", "signal"] }
